# leads-verifier-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: llm_chain.py  main.py  models.py  scoring_logic.py  scoring_workflow.py
