[project]
name = "assignment-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.0",
	"uv>=0.4.20",
	"python-multipart>=0.0.9",
	"pandas>=2.2.2",
	"python-dotenv>=1.0.1",
	"langchain>=0.2.14",
	"langchain-google-genai>=2.0.6",
	"langgraph>=0.2.26",
]

[tool.uv]
# Allows running: uv run app.main:app --reload
dev-dependencies = [
    "uvicorn>=0.35.0",
]
